[project]
name = "nautilus-backend"
version = "0.1.0"
description = "Strategy scaffolding for the IB backend"
authors = [{ name = "IB Box Spread Team" }]
requires-python = ">=3.10"
dependencies = [
  "nautilus-trader>=1.180.0",
  "pydantic>=2.4",
  "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
