[project]
name = "backend-python-scaffold"
version = "0.1.0"
description = "Deprecated backend Python scaffold kept only for packaging compatibility"
authors = [{ name = "IB Box Spread Team" }]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.4",
  "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
