[package]
name = "market_data_service"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
market_data = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
