[package]
name = "api"
edition = "2021"
version = "0.1.0"

[features]
default = []
keyring = ["credential_store/keyring"]

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
csv = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
jsonc-parser = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde_urlencoded = "0.7"
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
prost = "0.13"
prost-types = "0.13"
common = { path = "../common" }
credential_store = { path = "../credential_store" }
market_data = { path = "../market_data" }
risk = { path = "../risk", features = ["serde"] }
strategy = { path = "../strategy" }
nats_adapter = { path = "../nats_adapter" }
discount_bank_parser = { path = "../discount_bank_parser" }
quant = { path = "../quant", features = ["serde"] }
alpaca_api_client = "0.8"

[dev-dependencies]
async-trait = { workspace = true }
http-body-util = "0.1"
uuid = { workspace = true }
