[package]
name = "broker_engine"
edition = "2021"
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
derive_builder = { workspace = true }
financial_symbols = { workspace = true }
rust_decimal = { workspace = true }
common = { path = "../common" }
