[package]
name = "ib_adapter"
edition = "2021"
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ibapi = { workspace = true }
thiserror.workspace = true
rust_decimal.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
