[package]
name = "ib_adapter"
edition = "2021"
version.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
ibapi = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
