[package]
name = "ledger"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
uuid = { version = "1.10", features = ["v4", "serde"] }
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono", "uuid"] }
tempfile = { version = "3.11", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.11"
