[package]
name = "market_data"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["connect"] }
futures = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
derive_builder = { workspace = true }
common = { path = "../common" }
credential_store = { path = "../credential_store" }
url = "2"
yfinance-rs = "0.7.2"
thiserror = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
regex = "1"
alpaca_api_client = "0.8"

[features]
default = []
keyring = ["credential_store/keyring"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
wiremock = "0.6"
serde_json = { workspace = true }
