[package]
name = "nats_adapter"
edition = "2021"
version = "0.1.0"

[dependencies]
alloy = "1"
anyhow = { workspace = true }
backoff = { workspace = true }
async-nats = { version = "0.46", default-features = false, features = ["server_2_10", "server_2_11", "server_2_12", "service", "jetstream", "nkeys", "crypto", "object-store", "kv", "websockets", "nuid", "aws-lc-rs"] }
bytes = "1.5"
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

prost = "0.13"
prost-types = "0.13"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
