[package]
name = "quant"
edition = "2021"
version = "0.1.0"
description = "Quantitative finance calculations (BSM, Greeks, Monte Carlo, yield curves)"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
derive_builder = { workspace = true }
parking_lot = "0.12"
rand = "0.8"
serde = { workspace = true }
thiserror = { workspace = true }
time = "0.3"

[dev-dependencies]
approx = "0.5"
rand_chacha = "0.3"
optionstratlib = "0.15"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
