[package]
name = "quant"
edition = "2021"
version = "0.1.0"
description = "Quantitative finance calculations (BSM, Greeks, Monte Carlo, yield curves)"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
serde = ["dep:serde"]

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
derive_builder = { workspace = true }
parking_lot = "0.12"
rand = "0.8"
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
time = "0.3"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
rand_chacha = "0.3"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"

[[bench]]
name = "trading_numeric_compare"
harness = false
