[package]
name = "risk"
edition = "2021"
version = "0.1.0"

[features]
serde = ["dep:serde"]

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, optional = true }
tracing = { workspace = true }
thiserror = { workspace = true }
quant = { path = "../quant" }
time = "0.3"
