[package]
name = "yatws_adapter"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
broker_engine    = { path = "../broker_engine" }
async-trait.workspace = true
backoff.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono           = { workspace = true }
yatws            = { path = "../../../../../yatws/yatws" }
