[package]
name = "backend_service"
edition = "2021"
version = "0.1.0"
authors = ["Aether Team"]

[dependencies]
anyhow = { workspace = true }
bytes = "1.5"
market_data = { path = "../../crates/market_data" }
strategy = { path = "../../crates/strategy" }
risk = { path = "../../crates/risk" }
api = { path = "../../crates/api" }
nats_adapter = { path = "../../crates/nats_adapter" }
prost-types = "0.13"
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
toml = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
ibapi = { workspace = true }

[dev-dependencies]
nats_adapter = { path = "../../crates/nats_adapter" }
strategy = { path = "../../crates/strategy" }
serde_json = { workspace = true }
chrono = { workspace = true }
