[package]
name = "backend_service"
edition = "2021"
version = "0.1.0"
authors = ["Aether Team"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = "1.5"
market_data = { path = "../../crates/market_data" }
strategy = { path = "../../crates/strategy" }
risk = { path = "../../crates/risk" }
api = { path = "../../crates/api", features = ["keyring"] }
nats_adapter = { path = "../../crates/nats_adapter" }
prost-types = "0.13"
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
toml = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
ibapi = { workspace = true }
tws_yield_curve = { path = "../../crates/tws_yield_curve" }
broker_engine = { path = "../../crates/broker_engine" }
ib_adapter = { path = "../../crates/ib_adapter" }

[dev-dependencies]
nats_adapter = { path = "../../crates/nats_adapter" }
strategy = { path = "../../crates/strategy" }
serde_json = { workspace = true }
chrono = { workspace = true }
