[package]
name = "backend_service"
edition = "2021"
version = "0.1.0"
authors = ["Aether Team"]

[features]
# Dev-only load testing utilities (kept out of default builds).
loadtest = ["dep:clap", "dep:rlt", "dep:humantime"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = "1.5"
common = { path = "../../crates/common" }
market_data = { path = "../../crates/market_data", features = ["keyring"] }
strategy = { path = "../../crates/strategy" }
risk = { path = "../../crates/risk" }
api = { path = "../../crates/api", features = ["keyring"] }
nats_adapter = { path = "../../crates/nats_adapter" }
prost-types = "0.14"
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
toml = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
ibapi = { workspace = true }
tws_yield_curve = { path = "../../crates/tws_yield_curve" }
broker_engine = { path = "../../crates/broker_engine" }
ib_adapter = { path = "../../crates/ib_adapter" }
clap = { version = "4", features = ["derive"], optional = true }
humantime = { version = "2", optional = true }
rlt = { version = "0.5", optional = true }

[dev-dependencies]
nats_adapter = { path = "../../crates/nats_adapter" }
strategy = { path = "../../crates/strategy" }
serde_json = { workspace = true }
chrono = { workspace = true }

[[bin]]
name = "rlt_nats_api_benchmarks"
path = "src/rlt_nats_api_benchmarks.rs"
required-features = ["loadtest"]
